--- a/src/pages/sign-in-and-sign-out/sign-in-and-sign-out.styles.scss
+++ b/src/pages/sign-in-and-sign-out/sign-in-and-sign-out.styles.scss
@@ -1,6 +1,7 @@
-.sign-in-and-sign-up {
-    width: 850px;
-    display: flex;
-    justify-content: space-between;
-    margin: 30px auto;
+.sign-in-and-sign-out {
+	width: 850px;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	margin: 30px auto;
 }
